# ave

./: .gitignore  Cargo.toml  README.md
.github/workflows/: format.yml  rust.yml
ave-image/: Cargo.toml
ave-image/src/: main.rs
ave-image/src/app/: app_message.rs  mod.rs
ave-image/src/app/state/: img.rs  mod.rs
ave-image/src/model/: image_type.rs  mod.rs  receive_msg.rs
ave-image/src/page/: img.rs
ave-tool/: Cargo.toml
ave-tool/src/: datetime.rs  file_tool.rs  img_tool.rs  lib.rs
ave-video/: .gitignore  Cargo.toml
ave-video/src/: main.rs
ave-video/src/app/: app_message.rs
ave-video/src/app/state/: home.rs
ave-video/src/gstr/: conversion.rs
ave-video/src/model/: mod.rs  vide_type.rs
ave-video/src/page/: home.rs
iced-style/: Cargo.toml
iced-style/src/: button_style.rs  container_style.rs  input_style.rs  lib.rs  pick_list_style.rs  scrollable_style.rs
src/: main.rs
src/app/: app_message.rs  global.rs  mod.rs
src/app/state/: home.rs  img.rs  mod.rs
src/gstr/: conversion.rs
src/model/: image_type.rs  mod.rs  vide_type.rs
src/page/: Home.rs  audio.rs  img.rs  mod.rs
src/style/: button_style.rs  container_style.rs  mod.rs  pick_list_style.rs
src/tool/: datetime.rs  file_tool.rs  img_tool.rs  mod.rs
