[package]
name = "ave"
version = "0.1.0"
authors = ["schizobulia <2833324528@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { package = "gstreamer", path = "../gstreamer" }
gst-pbutils = { package = "gstreamer-pbutils", path = "../gstreamer-pbutils" }
anyhow = "1.0"
derive_more = "0.99.5"
glib = { git = "https://github.com/gtk-rs/gtk-rs" }
iced = "0.2.0"
nfd2 = "0.2.3"
chrono = "0.4.19"

[features]
default = []
v1_10 = ["gst/v1_10"]
v1_14 = ["gst/v1_14"]
