[package]
name = "ave-image"
version = "0.1.0"
authors = ["schizobulia <2833324528@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3.0" }
ave-tool = { path = "../ave-tool", features = ["img_tool", "datetime"] }
iced-style = { path = "../iced-style" }