[package]
name = "ave-tool"
version = "0.1.0"
authors = ["schizobulia <2833324528@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", optional = true }
image = { version = "0.23.12", optional = true }
nfd2 = "0.2.3"


[features]
default = []
img_tool = ["image"]
datetime = ["chrono"]
