[package]
name = "ave-video"
version = "0.1.0"
authors = ["schizobulia <2833324528@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2.0" }
ave-tool = { path = "../ave-tool", features = ["datetime"] }
iced-style = { path = "../iced-style" }
iced_aw = { git = "https://gitee.com/schizobuliawj/iced_aw", default-features = false, features = ["card", "colors", "modal"] }
[features]
default = []